// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreupgradeReportsHelpers should collect ids for job invocation 1`] = `
Object {
  "entryIds": Array [],
  "hostIds": Array [],
}
`;

exports[`PreupgradeReportsHelpers should detect a fixable entry in reports 1`] = `true`;

exports[`PreupgradeReportsHelpers should detect empty object 1`] = `true`;

exports[`PreupgradeReportsHelpers should detect entry is fixable 1`] = `true`;

exports[`PreupgradeReportsHelpers should detect entry is not fixable when not having a command 1`] = `false`;

exports[`PreupgradeReportsHelpers should detect entry is not fixable when not having remediations 1`] = `false`;

exports[`PreupgradeReportsHelpers should detect no entry is fixable 1`] = `false`;

exports[`PreupgradeReportsHelpers should detect non-empty object 1`] = `false`;

exports[`PreupgradeReportsHelpers should return entries page 1`] = `
Array [
  Object {
    "id": 45,
    "severity": "low",
    "title": "Not enough credits",
  },
  Object {
    "id": 46,
    "severity": "medium",
    "title": "SELinux is turned off",
  },
  Object {
    "id": 47,
    "severity": "medium",
    "title": "Root password is too short",
  },
]
`;

exports[`PreupgradeReportsHelpers should return flattened entrues 1`] = `
Array [
  Object {
    "id": 42,
    "severity": "Too severe to talk about",
    "title": "Fix me!",
  },
  Object {
    "id": 43,
    "severity": "medium",
    "title": "I am broken too",
  },
  Object {
    "id": 44,
    "severity": "high",
    "title": "Octocat is not happy",
  },
  Object {
    "id": 45,
    "severity": "low",
    "title": "Not enough credits",
  },
  Object {
    "id": 46,
    "severity": "medium",
    "title": "SELinux is turned off",
  },
  Object {
    "id": 47,
    "severity": "medium",
    "title": "Root password is too short",
  },
  Object {
    "id": 49,
    "severity": "high",
    "title": "No chocolate chip cookies in cookie jar",
  },
]
`;
